# cuda_practice

basic/: readme.md
basic/gather/: Makefile  black_shoe.cu
basic/map/: Makefile  map.cu
basic/reduce/: Makefile  reduce.cu
basic/scan/: Makefile  scan.cu
cs344/: CMakeLists.txt  README.md
cs344/HW1/: CMakeLists.txt  student_func.cu
cs344/HW2/: CMakeLists.txt  main.cpp  student_func.cu
cs344/HW3/: student_func.cu
matrix_add/: matrixadd.cu
mul_matrix/: Makefile  matrix_mult.cu  matrixmult.cu  mul_matrix.cpp  register_blocking.md  register_blocking.png.odg
